Additional layout issues for other editions

--- a/vufind/web/interface/themes/default/css/search-results.css
+++ b/vufind/web/interface/themes/default/css/search-results.css
@@ -61,7 +61,7 @@
 }
 
 .holdingsSummary{
-	height: 3em;
+	height: 4.5em;
 }
 #formatCategories{
   min-height: 60px;
